# BluePrint

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  chat_history.db  check_scores.py  debug_stock_api.py  debug_yfinance.py  docker-compose.yml  locate_agents.py  pyproject.toml  reproduce_mock_errors.py  requirements.txt  scores_output.txt  start_rag.sh  supabase_schema.sql  task.md  update_schema.py  verify_api.py  verify_finnhub.py  verify_log.txt  verify_streaming.py  verify_toggle.py
Auth/: dependencies.py  verification.py
CalcAgent/: __init__.py  agent.py  config.py  main.py  schemas.py  subagents.py  utils.py
CalcAgent/config/: __init__.py  config.py  prompts.py
CalcAgent/prompts/: __init__.py  prompts.py
CalcAgent/src/: agent.py  main.py  schemas.py  utils.py
CalcAgent/tools/: __init__.py  budget.py  investment.py  tax.py  tvm.py  wolfram.py
ManagerAgent/: api.py  api_snippet.py  database.py  db.py  holdings_db.py  orchestrator.py  profile_engine.py  prompts.py  reports.db  reports_db.py  router.py  router_intelligence.py  tools.py
PaperTrader/: __init__.py  agent_backtester.py  autonomous_agent.py  backtester.py  mcp_server.py  router.py  service.py  setup_agent.py
PaperTrader/TradingAgents/: default_config.py
PaperTrader/TradingAgents/dataflows/: alpha_vantage.py  alpha_vantage_fundamentals.py  config.py  interface.py  stockstats_utils.py  tavily.py  y_finance.py
PaperTrader/TradingAgents/graph/: conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
PaperTrader/adapters/: __init__.py  mock_tools.py  rp_adapter.py  test_rp_adapter.py
PaperTrader/rp_traders/: accounts.py  trading_floor.py
RAG_PIPELINE/: .env.example  .gitignore  check_models.py  docker-compose.yml  failed_extractions_store.json  generate_sample_pdf.py  generate_sensitive_pdf.py  requirements.txt  run.sh
RAG_PIPELINE/src/: config.py  graph.py  ingestion.py  local_store.py  main.py  reingest.py
StockAgents/alembic/: env.py
StockAgents/alembic/versions/: c6c409e027f1_add_user_model.py
StockAgents/backend/: alembic.ini  debug_finnhub.py  debug_groq.py  main.py
StockAgents/backend/api/: deps.py
StockAgents/backend/core/: config.py  prompts.py
StockAgents/backend/models/: user.py
StockAgents/backend/services/: agent_engine.py  finnhub_client.py  llm_service.py  portfolio_engine.py  predictive_engine.py  quant_agent.py  query_manager.py  researcher_agent.py
StockAgents/backend/tools/: __init__.py  wolfram_tool.py
StockAgents/core/: config.py  prompts.py  security.py
StockAgents/db/: session.py
StockAgents/infra/: docker-compose.yml
StockAgents/models/: stock.py  test_fiqa_accuracy.py  train_fiqa_model.py
StockAgents/models/sentiment_model/: config.json  model.safetensors
StockAgents/services/: agent_engine.py  article_service.py  base_agent.py  finnhub_client.py  llm_service.py  quant_agent.py  researcher_agent.py
StockAgents/tools/: tavily_tool.py  wolfram_tool.py  yfinance_tool.py
frontend/: Dockerfile  README.md  eslint.config.js  lint_output.txt  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/pages/: Auth.tsx  Dashboard.tsx
scripts/: check_db_status.py  fix_imports.py  frontend_auth_example.js  migrate_to_supabase.py  verify_alpha_vantage.py  verify_history_sorting.py
src/: main.py
tests/: __init__.py  manual_agent_test.py  test_agent.py  test_api_keys.py  test_auth.py  test_auth_integration.py  test_backend_api.py  test_comprehensive.py  test_historical_fundamentals.py  test_ingestion_unit.py  test_manager.py  test_manager_architecture.py  test_memory.py  test_rag.py  test_router_intelligence.py  test_router_verification.py
(+123 files in other folders)
